--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   equatable: ^2.0.7
   firebase_auth: ^5.5.3
   introduction_screen: ^3.1.4
+  another_flushbar: ^1.10.24
+  salomon_bottom_bar: ^3.3.2
+  cloud_firestore: ^5.6.7
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
